kubernetes/manifests/kubeflow-pipelines-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow-pipelines-route
  namespace: kubeflow
spec:
  parentRefs:
  - name: public-gateway
    namespace: envoy-gateway-system
  hostnames:
  - ghada.eks.karimarous.com
  rules:
  - backendRefs:
    - name: ml-pipeline-ui
      port: 80
